@@ -25,6 +25,7 @@ FIXES
 * Reverted 'Fix for retaining host display name and alias, as well as service display name' as configuration information stored incorrectly over a reload
 * Fixed compile warnings for size_t (Michael Friedrich)
 * Fixed problem where acknowledgements were getting reset when a hard state change occurred
+* Removed duplicated unlinks for check result files with multiple results
 
 WARNINGS
 
